--- a/client/src/components/Css/login.css
+++ b/client/src/components/Css/login.css
@@ -23,11 +23,12 @@ background-color: rgba(5, 5, 5, 0.864);
   padding: 20px;
   border-radius: 5px;
   border-top: 5px solid #ff656c;
-  border-left: 5px solid #ff656c;
+  border-right: 5px solid#ff656c;
+
   margin: 0 auto;
     }
 .inputm{
-  width: 100%;
+  width: 90%;
   padding: 14px 16px;
   border: 0;
   background: rgba(17, 17, 18, 0.715);
