--- a/client/src/components/Css/form.css
+++ b/client/src/components/Css/form.css
@@ -1,14 +1,9 @@
 .divform{
-   
-  background-image: url('../imagenes/form.jpeg');
-  background-repeat:repeat;
-  background-size:contain;
-    height: 10%;
-  display: flex;
   justify-content: center;
   font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif 'Arial Narrow', Arial, sans-serif;
  color: #b513e7;
- 
+ border: 5px solid #ac25d5;
+
 
 }
 
@@ -26,32 +21,33 @@
 }
 .inpForm{
     border-radius: 5px;
-    background-color: #eaf0f8af;
-
-    
+    background-color: #f2f3f4af;  
+    font-size: 18px; 
 }
 
 .container {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:  Tahoma, Geneva, Verdana, sans-serif;
     font-size: 13px;
-   background-color: #d51919;
+
 }
 
 ul.ks-cboxtags {
     list-style: none;
     padding: 0px; 
+    column-count: 4;
+   
+    
 }
 ul.ks-cboxtags li{
-  /* width: 100%;
-  height: 100px; */
- 
+
+ padding: 10px;
 
  
 }
 ul.ks-cboxtags li label{
     background-color: rgba(255, 255, 255, 0.662);
     border: 2px solid rgba(139, 139, 139, .3);
-    color: #d51919;
+    color: #ff0202;
     border-radius: 25px;
     white-space: nowrap;
     margin: 13px 0px;
@@ -62,11 +58,12 @@ ul.ks-cboxtags li label{
     user-select: none;
     -webkit-tap-highlight-color: transparent;
     transition: all .2s; 
+   
 }
 
 ul.ks-cboxtags li label {
     padding: 8px 12px;
-    cursor: pointer; 
+    cursor:auto; 
 }
 
 ul.ks-cboxtags li label::before {
@@ -94,8 +91,9 @@ ul.ks-cboxtags li input[type="checkbox"]:checked + label::before {
 
 ul.ks-cboxtags li input[type="checkbox"]:checked + label {
     border: 2px solid #1bdbf8;
-    background-color: #0c0c0c3c;
-    color: rgb(217, 27, 27);
+    
+    background-color: #12971d;
+    color: rgb(15, 14, 14);
     transition: all .2s;
      
 }
@@ -108,10 +106,9 @@ ul.ks-cboxtags li input[type="checkbox"] {
 ul.ks-cboxtags li input[type="checkbox"] {
   position: absolute;
   opacity:0;
-  width: 100%;
+  /* width: 100%; */
   height: 20%;
 }
 ul.ks-cboxtags li input[type="checkbox"]:focus + label {
   border: 2px solid #ac25d5;
 }
-
